--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,22 @@
               <li class="nav-item">
                 <a class="nav-link" href="/gear">Gear Planner</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/static">Static</a>
-              </li>
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Static
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                    {% if g.user.statics %}
+                      {% for static in g.user.statics %}
+                      <li><a class="dropdown-item" href="/static/id/{{ static.id }}">{{ static.name }}</a></li>
+                      {% endfor %}
+                      <li><hr class="dropdown-divider"></li>
+                    {% endif %}
+                    <li><a class="dropdown-item" href="/static">Create a static/guild</a></li>
+                    </ul>
+                </li>
+            </ul>
             </ul>
             {% if g.user %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
