--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>XIVPlanner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
@@ -17,28 +17,29 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            {% if g.user.gearsets %}
+              <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Gear Planner
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                    {% for gearset in g.user.gearsets %}
+                      <li><a class="dropdown-item" href="/gear/id/{{ gearset.id }}">{{ gearset.name }}</a></li>
+                    {% endfor %}
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/gear">Create a gearset</a></li>
+                  </ul>
+                </li>
+              </ul>
+            {% else %}
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="/gear">Gear Planner</a>
               </li>
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Static
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                    {% if g.user.statics %}
-                      {% for static in g.user.statics %}
-                      <li><a class="dropdown-item" href="/static/id/{{ static.id }}">{{ static.name }}</a></li>
-                      {% endfor %}
-                      <li><hr class="dropdown-divider"></li>
-                    {% endif %}
-                    <li><a class="dropdown-item" href="/static">Create a static/guild</a></li>
-                    </ul>
-                </li>
             </ul>
-            </ul>
-            {% if g.user %}
+            {% endif %}
+            {% if g.user.gearsets %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -70,9 +71,9 @@
     <!-- Library JS & our JS -->
     <script src="https://unpkg.com/jquery"></script>
     <script src="http://unpkg.com/axios/dist/axios.js"></script>
-    <script src="static/js/gear.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+    {% block script %}
+    {% endblock %}
 </body>
 </html>
